--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,5 +18,16 @@
 @import 'bootstrap';
 
 h1, h2, h3 {
-  font-family: 'Open Sans', sans-serif;
+   font-family: 'Open Sans', sans-serif;
+}
+
+body, .navbar {
+  //Gradient provided by uiGradients.com
+  background: #0f0c29;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.navbar {
+  border: none;
 }
