--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,20 +24,12 @@ h1, h2, h3 {
    font-family: 'Open Sans', sans-serif;
 }
 
+// BG Gradient
 .navbar, .home-callout {
   // Gradient provided by uiGradients.com
   background: #fc4a1a;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #f7b733, #fc4a1a);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #f7b733, #fc4a1a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-// BG Gradient
-.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
-  color: white;
-  &:hover {
-    color: white;
-    opacity: 0.75;
-  }
 }
 
 // Home page styles
@@ -52,4 +44,19 @@ h1, h2, h3 {
 .navbar {
   border: none;
 }
+
+.navbar-brand {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
+}
+
+.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
+  color: white;
+  &:hover {
+    color: white;
+    opacity: 0.75;
+  }
+}
+
+
 
