--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,9 @@
-<h1>About Page</h1>
+<div class="container text-center">
+  <h1>About Page</h1>
+  <p>We are DevMatch. Our company focuses on creating an exclusive community
+  for developers and entrepreneurs to meet. Lorem ipsum dolor sit 
+  amet, consectetur adipisicing elit. Perferendis quos
+  perspiciatis temporibus facere vel hic quisquam vero reiciendis
+  enim aspernatur dignissimos eos necessitatibus, officia cum 
+  mollitia repudiandae consequatur totam possimus!</p>
+</div>
