--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,7 +50,8 @@ h1, h2, h3 {
   font-weight: 800;
 }
 
-.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
+.navbar-default .navbar-brand, 
+.navbar-default .navbar-nav > li > a {
   color: white;
   &:hover {
     color: white;
@@ -58,5 +59,15 @@ h1, h2, h3 {
   }
 }
 
+.navbar-default .navbar-toggle .icon-bar,  {
+  background-color: white;
+}
+
+.navbar-default .navbar-toggle {
+  border: 2px solid white;
+  &:hover, &:focus {
+    background-color: #f97624;
+  }
+}
 
 
